simpleStop/psychopy_traceback.txt
Traceback (most recent call last):
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/experiment/components/keyboard/__init__.py”, line 372, in writeFrameCodeJS
  File “<string>”, line 1
    $currentCorrectResponse
    ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/app/builder/builder.py”, line 4127, in onPavloviaDebug
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/app/runner/runner.py”, line 795, in runOnlineDebug
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/scripts/psyexpCompile.py”, line 77, in generateScript
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/scripts/psyexpCompile.py”, line 213, in compileScript
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/scripts/psyexpCompile.py”, line 186, in _makeTarget
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/experiment/_experiment.py”, line 343, in writeScript
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/experiment/routines/_base.py”, line 617, in writeEachFrameCodeJS
  File “/Applications/PsychoPy.app/Contents/Resources/lib/python3.8/psychopy/experiment/components/keyboard/__init__.py”, line 374, in writeFrameCodeJS
psychopy.experiment.utils.CodeGenerationException: goResp: 
